update register